export const snapshot = {};

snapshot[`Wrapper 1`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "",
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`Wrapper 2`] = `
{
  additionalProperties: false,
  description: "Description one.",
  properties: {
    value: {
      description: "",
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`Wrapper 3`] = `
{
  additionalProperties: false,
  description: "Description two. Description one.",
  properties: {
    value: {
      description: "",
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
